--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,38 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #F3E5CB;
+  --text-heading: #171717;
+  --text-body: #5B5B5B;
+  --primary: #A7683A;
 }
 
 @theme inline {
   --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-text-heading: var(--text-heading);
+  --color-text-body: var(--text-body);
+  --color-primary: var(--primary);
+  --font-sans: var(--font-poppins), sans-serif;
+  --font-heading: var(--font-neue-montreal), sans-serif;
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--text-body);
+  font-family: var(--font-sans);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--text-heading);
+  font-family: var(--font-heading);
+}
+
+p {
+  color: var(--text-body);
+  font-family: var(--font-sans);
 }
